--- a/src/components/FormVagas/FormVagas.module.css
+++ b/src/components/FormVagas/FormVagas.module.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
   display: grid;
   grid-template-columns: 1fr auto;
   background-color: var(--cor-secundaria);
@@ -22,5 +22,4 @@
   padding: 0 16px;
   outline-color: var(--cor-principal);
 }
-
-
+  */
